--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <a href="map.html" target="blank">
 <img class="map" src="map.png" alt="Chartfox">
 </a>
-<img class="landing" src="RunwayCalculator.png" alt="Chartfox">
+<a href="simbrief.html" target="blank">
+<img class="landing" src="simbrief.jfif" alt="Chartfox">
+</a>
 <img class="Settings" src="Settings.png" alt="Chartfox">
 <img class="Annotate" src="Pen.png" alt="Chartfox" >
 
