--- a/index.html
+++ b/index.html
@@ -6,20 +6,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<a href="chartfox.html" target="blank">
-    <img class="chartfox" src="chartfox.jpg" alt="Chartfox">
-</a>
-<a href="navigraph.html" target="blank">
-    <img class="navigraph" src="navigraph.png" alt="Chartfox">
-</a>
-<a href="map.html" target="blank">
-<img class="map" src="map.png" alt="Chartfox">
-</a>
-<a href="simbrief.html" target="blank">
-<img class="landing" src="simbrief.jfif" alt="Chartfox">
-</a>
-<img class="Settings" src="Settings.png" alt="Chartfox">
-<img class="Annotate" src="Pen.png" alt="Chartfox" >
+<div class="container">
 
+
+    <a href="chartfox.html" target="blank">
+        <img class="icon" src="Chartfox.png" alt="Chartfox">
+    </a>
+
+    <a href="navigraph.html" target="blank">
+        <img class="icon" src="Navigraph.png" alt="Chartfox">
+    </a>
+
+    <a href="map.html" target="blank">
+        <img class="icon" src="Map.png" alt="Chartfox">
+    </a>
+
+    <a href="simbrief.html" target="blank">
+        <img class="icon" src="simbrief.png" alt="Chartfox">
+    </a>
+
+    <a href="simbrief.html" target="blank">
+        <img class="icon" src="Settings.png" alt="Chartfox">
+    </a>
+    <a href="simbrief.html" target="blank">
+        <img class="icon" src="Pen.png" alt="Chartfox" >
+    </a>
+
+</div>
 </body>
 </html>
