--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
+<div class="container2">
 
 
     <a href="chartfox.html" target="blank">
@@ -25,10 +25,10 @@
         <img class="icon" src="simbrief.png" alt="Chartfox">
     </a>
 
-    <a href="simbrief.html" target="blank">
+    <a href="METAR.html" target="blank">
         <img class="icon" src="Settings.png" alt="Chartfox">
     </a>
-    <a href="simbrief.html" target="blank">
+    <a href="draw.html" target="blank">
         <img class="icon" src="Pen.png" alt="Chartfox" >
     </a>
 
