--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
 <div class="container2">
 
 
-    <a href="chartfox.html" target="blank">
+    <a href="chartfox.html" target="_self">
         <img class="icon" src="Chartfox.png" alt="Chartfox">
     </a>
 
-    <a href="navigraph.html" target="blank">
+    <a href="navigraph.html" target="_self">
         <img class="icon" src="Navigraph.png" alt="Chartfox">
     </a>
 
-    <a href="map.html" target="blank">
+    <a href="map.html" target="_self">
         <img class="icon" src="Map.png" alt="Chartfox">
     </a>
 
-    <a href="simbrief.html" target="blank">
+    <a href="simbrief.html" target="_self">
         <img class="icon" src="simbrief.png" alt="Chartfox">
     </a>
 
-    <a href="METAR.html" target="blank">
+    <a href="METAR.html" target="_self">
         <img class="icon" src="Settings.png" alt="Chartfox">
     </a>
-    <a href="draw.html" target="blank">
+    <a href="draw.html" target="_self"">
         <img class="icon" src="Pen.png" alt="Chartfox" >
     </a>
 
