--- a/navigraph.html
+++ b/navigraph.html
@@ -8,7 +8,7 @@
 <body>
 
 <iframe src="https://charts.navigraph.com/" title="description"></iframe>
-<a href="index.html" target="blank">
+<a href="index.html" target="_self">
     <button class="home_button" type="button" ></button>
 </a>
 </body>
