--- a/map.html
+++ b/map.html
@@ -83,7 +83,7 @@
 
 
 </script>
-<a href="index.html" target="blank">
+<a href="index.html" target="_self">
     <button class="home_button" type="button" ></button>
 </a>
 </body>
