--- a/simbrief.html
+++ b/simbrief.html
@@ -8,7 +8,7 @@
 <body>
 
 <iframe src="https://www.simbrief.com/system/dispatch.php" title="description"></iframe>
-<a href="index.html" target="blank">
+<a href="index.html" target="_self">
     <button class="home_button" type="button" ></button>
 </a>
 </body>
