--- a/draw.html
+++ b/draw.html
@@ -45,10 +45,9 @@
         }
     }
 
-    // `DOMContentLoaded` may fire before your script has a chance to run, so check before adding a listener
     if (document.readyState === "loading") {
         document.addEventListener("DOMContentLoaded", readLocalStorage);
-    } else {  // `DOMContentLoaded` already fired
+    } else {
         readLocalStorage();
     }
 </script>
