--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>NextEFB</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -35,7 +36,7 @@
     <a href="METAR.html" target="_self">
         <img class="icon" src="Settings.png" alt="Chartfox">
     </a>
-    <a href="draw.html" target="_self"">
+    <a href="write.html" target="_self"">
         <img class="icon" src="Pen.png" alt="Chartfox" >
     </a>
 
