--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>NextEFB</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="style.css">
@@ -17,27 +17,27 @@
 <div class="container2">
 
 
-    <a href="chartfox.html" target="_self">
-        <img class="icon" src="Chartfox.png" alt="Chartfox">
+    <a href="html/chartfox.html" target="_self">
+        <img class="icon" src="img/Chartfox.png" alt="Chartfox">
     </a>
 
-    <a href="navigraph.html" target="_self">
-        <img class="icon" src="Navigraph.png" alt="Chartfox">
+    <a href="html/navigraph.html" target="_self">
+        <img class="icon" src="img/Navigraph.png" alt="Chartfox">
     </a>
 
-    <a href="map.html" target="_self">
-        <img class="icon" src="Map.png" alt="Chartfox">
+    <a href="html/map.html" target="_self">
+        <img class="icon" src="img/Map.png" alt="Chartfox">
     </a>
 
-    <a href="simbrief.html" target="_self">
-        <img class="icon" src="simbrief.png" alt="Chartfox">
+    <a href="html/simbrief.html" target="_self">
+        <img class="icon" src="img/simbrief.png" alt="Chartfox">
     </a>
 
-    <a href="METAR.html" target="_self">
-        <img class="icon" src="Settings.png" alt="Chartfox">
+    <a href="html/METAR.html" target="_self">
+        <img class="icon" src="img/Settings.png" alt="Chartfox">
     </a>
-    <a href="write.html" target="_self"">
-        <img class="icon" src="Pen.png" alt="Chartfox" >
+    <a href="html/write.html" target="_self"">
+        <img class="icon" src="img/Pen.png" alt="Chartfox" >
     </a>
 
 </div>
