--- a/html/map.html
+++ b/html/map.html
@@ -14,7 +14,7 @@
     <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-
+    <script type=“text/javascript” src=“simbrief.apiv1.js”></script>
 </head>
 <body>
 <div
